// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert display error message if property not added successfully 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Error!
  </div>
</DocumentFragment>
`;

exports[`Alert display success message if property is added successfully 1`] = `
<DocumentFragment>
  <div
    class="Alert alert-error"
  >
    Success!!!!
  </div>
</DocumentFragment>
`;

exports[`Alert no error if property added successfully 1`] = `<DocumentFragment />`;
